@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "rxvt 1"
-.TH rxvt 1 "2006-01-03" "6.2" "RXVT-UNICODE"
+.TH rxvt 1 "2006-01-04" "6.2" "RXVT-UNICODE"
 .SH "NAME"
 rxvt\-unicode (ouR XVT, unicode) \- (a VT102 emulator for the X window system)
 .SH "SYNOPSIS"
@@ -300,16 +300,17 @@ See also the question \*(L"How does rxvt-unicode choose fonts?\*(R" in the \s-1F
 section of @@RXVT_NAME@@(7).
 .IP "\fB\-fb\fR \fIfontlist\fR" 4
 .IX Item "-fb fontlist"
-Compile font\-styles: The bold font list to use when bold characters are to
+Compile font\-styles: The bold font list to use when \fBbold\fR characters are to
 be printed. See resource \fBboldFont\fR for details.
 .IP "\fB\-fi\fR \fIfontlist\fR" 4
 .IX Item "-fi fontlist"
-Compile font\-styles: The italic font list to use when bold characters are to
+Compile font\-styles: The italic font list to use when \fIitalic\fR characters are to
 be printed. See resource \fBitalicFont\fR for details.
 .IP "\fB\-fbi\fR \fIfontlist\fR" 4
 .IX Item "-fbi fontlist"
-Compile font\-styles: The bold italic font list to use when bold characters are to
-be printed. See resource \fBboldItalicFont\fR for details.
+Compile font\-styles: The bold italic font list to use when \fB\f(BIbold
+italic\fB\fR characters are to be printed. See resource \fBboldItalicFont\fR
+for details.
 .IP "\fB\-is\fR|\fB+is\fR" 4
 .IX Item "-is|+is"
 Compile font\-styles: Bold/Italic font styles imply high intensity
